--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/sitegen"]
 	path = lib/sitegen
-	url = git@github.com:julianmichael/sitegen.git
+	url = https://github.com/julianmichael/sitegen.git
