--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ site/qasrl.org/error.html
 site/browse.qasrl.org/index.html
 site/browse.qasrl.org/error.html
 site/browse.qasrl.org/scripts/*
+site/demo.qasrl.org/index.html
+site/demo.qasrl.org/error.html
+site/demo.qasrl.org/scripts/*
