WIP: Move browser and demo to qasrl-apps public submodule
Also add some scripts to streamline the dev and deployment process for apps etc.
Still wip on the generation/build situation for main website and demo. trying to get the browser
working right now since it's down atm.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/sitegen"]
 	path = lib/sitegen
 	url = https://github.com/julianmichael/sitegen.git
+[submodule "lib/qasrl-apps"]
+	path = lib/qasrl-apps
+	url = https://github.com/julianmichael/qasrl-apps.git
