--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
 out
-site/qasrl.org/index.html
-site/qasrl.org/error.html
-site/browse.qasrl.org/index.html
-site/browse.qasrl.org/error.html
-site/browse.qasrl.org/scripts/*
-site/demo.qasrl.org/index.html
-site/demo.qasrl.org/error.html
-site/demo.qasrl.org/scripts/*
+site/*
