--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "lib/sitegen"]
-	path = lib/sitegen
-	url = https://github.com/julianmichael/sitegen.git
-[submodule "lib/qasrl-apps"]
-	path = lib/qasrl-apps
-	url = https://github.com/julianmichael/qasrl-apps.git
-[submodule "lib/nrl-qasrl"]
-	path = lib/nrl-qasrl
-	url = https://github.com/julianmichael/nrl-qasrl.git
+[submodule "_data/pubdata"]
+	path = _data/pubdata
+	url = git@github.com:julianmichael/pubdata.git
