--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,7 @@ exclude:
   - vendor/gems/
   - vendor/ruby/
   - _data/pubdata/_layouts
+  - _data/pubdata/_includes
   - _data/pubdata/_sass
   - _data/pubdata/assets
 
